--- a/Static GUI/CSE201_v1/src/address/view/StudentLogin.fxml
+++ b/Static GUI/CSE201_v1/src/address/view/StudentLogin.fxml
@@ -93,82 +93,6 @@
                                     </HBox>
                                  </children>
                               </VBox>
-                              <VBox prefHeight="232.0" prefWidth="940.0">
-                                 <children>
-                                    <HBox prefHeight="36.0" prefWidth="433.0">
-                                       <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Change User Details" wrappingWidth="434.13670349121094">
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                             <font>
-                                                <Font size="18.0" />
-                                             </font>
-                                          </Text>
-                                       </children>
-                                    </HBox>
-                                    <HBox prefHeight="64.0" prefWidth="940.0">
-                                       <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" wrappingWidth="199.4700469970703">
-                                             <font>
-                                                <Font size="16.0" />
-                                             </font>
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </Text>
-                                          <HBox prefHeight="65.0" prefWidth="960.0">
-                                             <children>
-                                                <TextField prefHeight="44.0" prefWidth="349.0" promptText="First Name">
-                                                   <HBox.margin>
-                                                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                   </HBox.margin>
-                                                </TextField>
-                                                <TextField prefHeight="48.0" prefWidth="363.0" promptText="Last Name">
-                                                   <HBox.margin>
-                                                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                   </HBox.margin>
-                                                </TextField>
-                                             </children>
-                                          </HBox>
-                                       </children>
-                                    </HBox>
-                                    <HBox prefHeight="37.0" prefWidth="433.0">
-                                       <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="199.4700469970703">
-                                             <font>
-                                                <Font size="16.0" />
-                                             </font>
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </Text>
-                                       </children>
-                                    </HBox>
-                                    <HBox prefHeight="65.0" prefWidth="940.0">
-                                       <children>
-                                          <TextField prefHeight="44.0" prefWidth="358.0" promptText="Old Password">
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </TextField>
-                                          <TextField prefHeight="44.0" prefWidth="330.0" promptText="New Password">
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </TextField>
-                                          <TextField prefHeight="45.0" prefWidth="371.0" promptText="Re-enter Password">
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </TextField>
-                                       </children>
-                                    </HBox>
-                                 </children>
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                 </VBox.margin>
-                              </VBox>
                               <VBox prefHeight="61.0" prefWidth="960.0">
                                  <children>
                                     <Button mnemonicParsing="false" onAction="#switchToLoginPage" prefHeight="49.0" prefWidth="168.0" text="Logout">
@@ -243,13 +167,8 @@
                         <ListView layoutX="-14.0" prefHeight="681.0" prefWidth="960.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0" />
                         <TableView layoutX="121.0" layoutY="104.0" prefHeight="188.0" prefWidth="794.0" AnchorPane.leftAnchor="121.0">
                            <columns>
-                              <TableColumn prefWidth="92.33332824707031" text="S.No." />
-                              <TableColumn prefWidth="88.0" text="Room No." />
-                              <TableColumn prefWidth="123.0" text="Occupancy" />
-                              <TableColumn prefWidth="123.33331298828125" text="Course Name" />
-                              <TableColumn prefWidth="111.0" text="Capacity" />
-                              <TableColumn prefWidth="109.0" text="Room No." />
-                              <TableColumn prefWidth="144.33331298828125" text="Room No." />
+                              <TableColumn prefWidth="111.0" text="Room Number" />
+                              <TableColumn prefWidth="144.33331298828125" text="Capacity" />
                            </columns>
                         </TableView>
                         <VBox layoutX="71.0" layoutY="323.0" prefHeight="324.0" prefWidth="470.0" AnchorPane.leftAnchor="121.0">
@@ -332,6 +251,9 @@
                               <Font size="25.0" />
                            </font>
                         </Text>
+                        <TextField fx:id="DisplayRooms_StartTime_StudentLogin" layoutX="34.0" layoutY="5.0" prefHeight="25.0" prefWidth="432.0" promptText="Start Time : HH - MM (24 hour)" />
+                        <TextField fx:id="DisplayRoom_EndTime_StudentLogin" layoutX="480.0" layoutY="5.0" prefHeight="25.0" prefWidth="432.0" promptText="End Time : HH - MM (24 hour)" />
+                        <Button fx:id="ShowRoom_BookButton_StudentLogin" layoutX="734.0" layoutY="292.0" mnemonicParsing="false" onAction="#onClickShowRoomButtonFromStudent" prefHeight="44.0" prefWidth="129.0" text="Show" />
                      </children>
                   </AnchorPane>
                </content>
